update project card styling to prevent overflow on mobile

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -167,14 +167,14 @@ h5 {
   text-transform: uppercase;
   font-weight: 300;
   font-size: 24px;
-  margin-top: 35px;
+  margin-top: 15px;
   margin-bottom: 5px;
 }
 
 .project h5 {
   font-size: 16px;
   font-weight: 300;
-  max-width: 190px;
+  max-width: 40%;
   margin-bottom: 25px;
 }
 
